gradleplugin: the analysed project's own source set must win over a dependent's
Found by the opensearch-plugin corpus entry on first contact. :libs:opensearch-common
came out with its main set carrying no buildUnit, no sourceRelease, no addModules,
no warningFlags, and build/distributions/opensearch-common-3.9.0-SNAPSHOT.jar --
which does not exist -- as its uri.

Cause: allSourceSetsByName merged the DEPENDENTS last. Two records describe the
same set and only one can see the compile task: makeSourceSet asks it for all four
fields and points uri at the class OUTPUT, while dependentProjectResult passes
null/0/empty BY DESIGN because a sibling's compile task belongs to another project.
And the project is one of its OWN dependents -- with the plugin applied it publishes
maddiSourceElements and then resolves that variant through its own configurations.
One-line precedence fix; the project's own record now wins.

MEASURED, before -> after on the corpus:
  uri        distributions/*.jar (absent)  ->  build/classes/java/main/
  buildUnit  absent                        ->  :libs:opensearch-common
  release    absent                        ->  21
  addModules absent                        ->  [jdk.incubator.vector]
  warnFlags  absent                        ->  21  (test: 22, with -Werror)
  ErrorReport  "class output does not exist ... units are dropped"
            -> "of the 112 type(s) parsed, 21 have neither a class file nor a source"

⛔ AND MY PREDICTION ABOUT THE REST WAS WRONG. I predicted the lost addModules was
costing the 13 "Unknown module jdk.incubator.vector" warnings and 24 vector stub
types. After the fix: still 13 and 24, unchanged. javac DOES get the flag
(JavaInspectorImpl:1184 turns addModules into --add-modules), so those warnings come
from ClassSymbolScanner, which is a different path and does not have the incubator
module among its jmods. The uri half of this defect was real and is fixed; the
vector half was a different cause and is still open.

⛔ NONE