@@ -68,9 +68,32 @@ public class ComputeSourceSets {
     public record Result(String mainSourceSetName, Map<String, SourceSet> sourceSetsByName,
                          List<Result> sourceSetDependencies,
                          Map<String, Set<String>> sourceProjectEdges) {
+        /**
+         * ⛔⛔ <b>THE ANALYSED PROJECT'S OWN VIEW OF A SOURCE SET WINS, AND IT USED TO LOSE.</b> The two sides
+         * describe the same set and only one of them can see the compile task: {@link #makeSourceSet} asks it for
+         * {@code buildUnit}, {@code sourceRelease}, {@code addModules} and {@code warningFlags} and points
+         * {@code uri} at the class OUTPUT, while {@link #dependentProjectResult} — which exists for SIBLINGS —
+         * passes {@code null}, {@code 0} and two empty lists by design, because a sibling's compile task belongs
+         * to another project. Merging the dependents LAST let the sibling-shaped record overwrite the real one.
+         *
+         * <p>⚠ <b>AND THE PROJECT IS ONE OF ITS OWN DEPENDENTS</b>, which is why this fires at all: with the
+         * plugin applied to it, it publishes the {@code maddiSourceElements} variant and then resolves that
+         * variant through its own configurations, so {@code collectProjectSources} hands it back to itself.
+         *
+         * <p>⚠ <b>MEASURED, on OpenSearch {@code :libs:opensearch-common}</b> (2026-08-20). Its build file scopes
+         * {@code --add-modules jdk.incubator.vector} to {@code compileJava}, so losing that set's
+         * {@code addModules} loses the flag: <b>13 × "Unknown module jdk.incubator.vector", 24 stub types</b> for
+         * {@code jdk.internal.vm.vector.VectorSupport$*}. The {@code uri} went with it — the sibling record names
+         * {@code build/distributions/opensearch-common-3.9.0-SNAPSHOT.jar}, which does not exist — so
+         * {@code opensearch-common/test} could not resolve into {@code main} and its units were dropped.
+         *
+         * <p>⛔ <b>AND NONE OF IT REACHED THE GATE.</b> {@code ErrorReport} counted <b>1 warning</b>: the 13 are
+         * {@code ClassSymbolScanner} lines it does not collect. A parse that has lost a module reports clean.
+         */
         public Map<String, SourceSet> allSourceSetsByName() {
-            Map<String, SourceSet> map = new HashMap<>(sourceSetsByName);
+            Map<String, SourceSet> map = new HashMap<>();
             sourceSetDependencies.forEach(r -> map.putAll(r.allSourceSetsByName()));
+            map.putAll(sourceSetsByName);
             return map;
         }
     }
